<resources>
    <string name="app_name">TEAM EIGHT</string>
    <string name="service_name">TEAM EIGHT</string>
    <string name="google_api">AIzaSyA2frTy4tc-UaInRtQYs3rTZO5QdH3js0k</string>
    <string name="bluetooth_uuid">94f39d29-7d6d-437d-973b-fba39e49d4ee</string>
    <string name="menu_guideline">Guideline</string>
    <string name="menu_emergency_contacts">Emergency contacts</string>
    <string name="title_activity_maps">Map</string>
    <string name="server_uri">http://175.123.140.145:88</string>
    <string name="led_resource_uri">images/LED/</string>
    <string name="youtube_key">n6EydOVvJ00</string>
    <string name="collection_user">user</string>
    <string name="collection_led">led</string>
    <string name="collection_accident">accident</string>
    <string name="collection_category">category</string>
    <string name="collection_devicetest">devicetest</string>
    <string name="collection_group">group</string>
    <string name="gif_format">.gif</string>
    <string name="png_format">.png</string>
    <string name="not_grant_location_permission">위치 서비스가 허용되지 않으면 "트래킹 서비스"와 "사고 대응 시스템"을 정상적으로 이용하실 수 없습니다. [설정-애플리케이션]에서 허용해주세요.</string>
    <string name="not_grant_contacts_permission">연락처 권한이 허용되지 않으면 "사고 대응 시스템"을 정상적으로 이용하실 수 없습니다. [설정-애플리케이션]에서 허용해주세요.</string>
    <string name="not_grant_camera_permission">카메라와 저장소 권한이 허용되지 않으면 프로필 설정을 정상적으로 이용하실 수 없습니다. [설정-애플리케이션]에서 허용해주세요.</string>
    <string name="continue_with_fb">Continue with Facebook</string>
    <string name="continue_with_kakao">Continue with KaKao</string>
    <string name="signup_with_email">Sign up with Email</string>
    <string name="login_question">Already a member?</string>
    <string name="log_in">Log in</string>
    <string name="or_divide">OR</string>
    <string name="intro_service_url">http://175.123.140.145:88/images/intro_service_</string>
    <string name="not_match_login">Email or password do not match.</string>
    <string name="riding_type_bicycle">bicycle</string>
    <string name="riding_type_motorcycle">motorcycle</string>
    <string name="riding_type_smart_mobility">smart_mobility</string>
    <string name="make_profile_title">Add Profile Photo</string>
    <string name="make_profile_riding_type">Set Your Vehicle Type</string>
    <string name="make_profile_message">Add a profile photo so your firends know it\'s you.</string>
    <string name="skip">Skip</string>
    <string name="edit">Edit</string>
    <string name="congrate_title">Congratulations!\nYou are in oure TEAM EIGHT</string>
    <string name="start">Start</string>
    <string name="change_username">Change Username</string>
    <string name="add_name_title">Add Your Name</string>
    <string name="add_name_message">Add your name so friends can find you.</string>
    <string name="info_name">Please contain \'2\-6\' characters, not special characters</string>
    <string name="invalid_name">Please must contain \'2\-6\' characters, not special characters</string>
    <string name="exist_name">Exist a name</string>
    <string name="name_field">Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pairing_title">EIGHT Pairing</string>
    <string name="pairing_content_text">Make sure your Smart EIGHT is close to your mobile device and your Phone Bluetooth setting is on.</string>
    <string name="pairing_start_txt">START PAIRING</string>
    <string name="looking_for">Looking for EIGHT...</string>
    <string name="pairing_succesful">Pairing Successful</string>
    <string name="pairing_fail">Sorry! We cannot find your device.</string>
    <string name="pairing_fail_msg">why not try again?</string>
    <string name="looking_description">When connecting for the first time, please wait for the popup window to appear.</string>
    <string name="pairing_retry">RETRY</string>
    <string name="my_leds">My LEDs</string>
    <string name="led_setting">LED setting</string>
    <string name="cardTitleSensor">Sensor</string>
    <string name="cardTitleBattery">Battery</string>
    <string name="cardTitleBrightnessAndSpeed">Brightness &amp; Speed</string>
    <string name="cardTitleLED">LED</string>
    <string name="cardTitleTracking">Current Tracking</string>
    <string name="disconnect_state">Disconnected device</string>
    <string name="connect_state">connected device</string>
    <string name="connect_device">Connect</string>
    <string name="dialog_ok">OK</string>
    <string name="led_dialog_download">Download</string>
    <string name="led_dialog_showon">Show on 8</string>
    <string name="led_dialog_cancel">Close</string>
    <string name="loading_dialog_user_data">Downloading user data..</string>
    <string name="led_download_complete">Download Completely!</string>
    <string name="cardTitleLEDDetail">Current LED</string>
    <string name="cardTitleLEDList">Emergency Contact List</string>
    <string name="newLED">New LED</string>
    <string name="topCategories">Top Categories</string>
    <string name="freeRanking">Free Ranking</string>
    <string name="paidRanking">Paid Ranking</string>
    <string name="cardview_character">Character</string>
    <string name="cardview_person">Person</string>
    <string name="carview_exercise">Exercise</string>
    <string name="cardview_animals">Animals</string>
    <string name="RankNum">n</string>
    <string name="RankName">Mario</string>
    <string name="search_hint">Type something...</string>
    <string name="cardTitleRecordedList">Recorded List</string>
    <string name="cardTitleRecordedTracking">Recorded Tracking</string>
    <string name="no_recorded_tracking_list">No Recorded Tracking</string>
    <string name="internal_directory">user_data</string>
    <string name="file_name_tracking_data">tracking.xml</string>
    <string name="emergency_dialog_title">Are you Ok?</string>
    <string name="emergency_dialog_send">Send</string>
    <string name="emergency_dialog_cancel">I\'m fine</string>
    <string name="emergency_dialog_content">Accident was detected!\nI\'ll send accident information to emergency contacts in 60s.</string>
    <string name="emergency_dialog_nearby">near by</string>
    <string name="emergency_dialog_send_completely">Send completely</string>
    <string name="emergency_dialog_coming">Your protector will coming soon!</string>
    <string name="contact_title">Emergency contacts</string>
    <string name="no_emergency_contacts_list">No exists contacts.\n Please add for your safe!</string>
    <string name="contact_delete">Delete</string>
    <string name="contact_cancel">Cancel</string>
    <string name="group_title">My Groups</string>
    <string name="no_group_list">No exists any group.\n Please add your awesome group!</string>
    <string name="group_delete">Delete</string>
    <string name="group_cancle">Cancel</string>
    <string name="plz_add_member">Please add your members.</string>
    <string name="make_group_title">Invite</string>
    <string name="done_make_group">OK</string>
    <string name="detail_group_title">Detail</string>
    <string name="group_list_item_key_members">members</string>
    <string name="group_list_item_key_groupIdx">groupIdx</string>
    <string name="sms_content">사고가 발생하였습니다. 도와주세요!!!</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="invalid_email">Not a valid email address</string>
    <string name="exist_email">Exist an email</string>
    <string name="invalid_password">Please must contain 8 or more characters, letters, and numbers</string>
    <string name="info_password">Please contain 8 or more characters, letters, and numbers</string>
    <string name="check_term">Please check term privacy</string>
    <string name="login_or">OR</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_forgot">Forgot password</string>
    <string name="login_facebook">Continue with Facebook</string>
    <string name="login_kakao">Continue with Kakao</string>
    <string name="login_welcome">Welcome back!</string>
    <string name="login">Log in</string>
    <string name="join_intro_text">Would you like to join us?</string>
    <string name="join_next">Next</string>
    <string name="join_email">Email</string>
    <string name="join_password">Password</string>
    <string name="join_pw_edittext_hint">비밀번호 (영문,숫자,특수문자 8-15자)</string>
    <string name="accept_join_term_f">Team 8에서 제공하는</string>
    <string name="term"><u>서비스 약관</u></string>
    <string name="accept_join_term_e">에 동의합니다.</string>
    <string name="join_loading_title">"회원가입을 완료하는 중입니다."</string>
    <string name="join_loading_message">"잠시만 기다려주세요..."</string>
    <string name="accident_threshold_set">Please set accident threshold.</string>
    <string name="accident_threshold_description">* The higher the critical point, the higher the frequency of notifications based on the accident coverage rate.</string>
    <string name="high_button">HIGH</string>
    <string name="high_desc">It is mainly suitable for the driver who has good road condition and runs at low speed.</string>
    <string name="medium_button">MEDIUM</string>
    <string name="medium_desc">It is suitable for occasional poor roads and high-speed driving.</string>
    <string name="low_button">LOW</string>
    <string name="low_desc">It is suitable for people who travel at high speeds with bad road conditions.</string>
    <string name="toggle_desc">The behavior of the accident detection system changes. Please consider carefully.</string>
    <string name="disable_button">I understood, Disable accident detection.</string>
    <string name="enable_button">Enable accident detection.</string>
    <string name="nav_tracking_record">Tracking Records</string>
    <string name="nav_emergency_contacts">Emergency Contacts</string>
    <string name="nav_accident_threshold">Accident Threshold</string>
    <string name="nav_group">Group Sync</string>
    <string name="confirm_privacy_term">상기 내용을 확인하였습니다.</string>
    <string name="input_text">Looking for…</string>
    <string name="button_send">Go!</string>
    <string name="police_stations">Police Stations in Victoria</string>
    <string name="medicare">Medicare Offices</string>
    <string name="attrib_format">Data from &lt;a href = "%s">data.gov.au&lt;/a>, modified under &lt;a href = \"http://creativecommons.org/licenses/by/3.0/au/\">CC BY 3.0 AU&lt;/a></string>
    <string name="police_stations_url">http://data.gov.au/dataset/police-station-locations/resource/76110b24-0f0a-4c29-9583-3f99eaba486c</string>
    <string name="medicare_url">http://data.gov.au/dataset/location-of-medicare-offices/resource/5d38e1be-4011-49c4-8b8b-75405eeb1088</string>
    <string name="kml_url">http://googlemaps.github.io/kml-samples/morekml/Polygons/Polygons.Google_Campus.kml</string>
    <string name="geojson_url">https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_day.geojson</string>
    <string-array name="heatmaps_datasets_array">
        <item>@string/police_stations</item>
        <item>@string/medicare</item>
    </string-array>
    <string name="button_radius">Radius</string>
    <string name="button_gradient">Gradient</string>
    <string name="button_opacity">Opacity</string>
    <string-array name="spinner_vehicle_type">
        <item>All</item>
        <item>Bicycle</item>
        <item>Motorcycle</item>
        <item>Smart Mobility</item>
    </string-array>
</resources>