<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="37dp"
            android:textAlignment="center"
            android:layout_marginBottom="9dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pairing_title"
            android:textColor="@color/black"
            style="@style/TitleTypo"/>

        <TextView
            android:textAlignment="center"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:text="@string/pairing_content_text"
            android:textColor="@color/black"
            android:alpha="0.49"
            style="@style/CategoryCardTitleTypo"/>

        <ImageView
            android:layout_marginTop="44dp"
            android:layout_width="144dp"
            android:layout_height="184dp"
            android:scaleType="centerCrop"
            android:src="@drawable/device"/>

        <Button
            android:id="@+id/startPairingBtn"
            android:layout_marginTop="67dp"
            style="@style/PrimaryButton"
            android:text="@string/pairing_start_txt"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>