<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:style="http://schemas.android.com/tools"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backJoinFragment"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:alpha="0.77"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/congrate_title"
            android:theme="@style/HeadlineTypo"/>

        <ImageView
            android:id="@+id/previewImage"
            android:src="@drawable/none_profile_square"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:layout_width="86dp"
            android:layout_height="86dp" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:alpha="0.49"
            android:layout_gravity="center"
            android:text="username"
            android:theme="@style/OptionBigTypo"/>

        <Button
            android:id="@+id/addPhotoBtn"
            android:layout_marginTop="72dp"
            android:layout_gravity="center"
            android:text="@string/start"
            style="@style/PrimaryButton" />

        <TextView
            android:id="@+id/hyperTextSkip"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/change_username"
            android:theme="@style/HyoertextTypo"/>

    </LinearLayout>



</ScrollView>