<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginLayout"
    android:background="@color/loginBackgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/backStartFragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_back" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:height="20dp"
                        android:gravity="center"
                        android:text="@string/login_welcome"
                        android:textColor="@color/black"
                        android:theme="@style/CategoryCardTitleTypo" />
                </RelativeLayout>

                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:orientation="horizontal">-->

                    <!--<ImageView-->
                        <!--android:id="@+id/imageView7"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_weight="1"-->
                        <!--app:srcCompat="@drawable/ic_back" />-->

                    <!--<TextView-->
                        <!--android:id="@+id/textView8"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_weight="1"-->
                        <!--android:text="@string/login_welcome" />-->
                <!--</LinearLayout>-->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_facebook" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="18dp"
                            android:theme="@style/CategoryCardTitleTypo"
                            android:textColor="@color/xxxxgray"
                            android:text="@string/login_facebook" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="28dp"

                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:theme="@style/CategoryCardTitleTypo"
                            android:textColor="@color/xxxxgray"
                            android:src="@drawable/ic_kakaotalk" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="18dp"
                            android:text="@string/login_kakao"
                            android:theme="@style/CategoryCardTitleTypo"
                            android:textColor="@color/xxxxgray" />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_or"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    style="@style/BodyTypo"
                    />



                    <com.helper.helper.view.widget.FloatingEditTextAddonControl
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="15dp"
                        android:id="@+id/loginEmailInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hint_text="@string/join_email"
                        app:clear_control="true"
                        app:check_control="true"
                        app:text_length="@integer/email_length" />


                    <com.helper.helper.view.widget.FloatingEditTextAddonControl
                        android:id="@+id/loginPwInput"
                        android:layout_marginTop="33dp"
                        android:layout_marginStart="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hint_text="@string/join_password"
                        app:clear_control="true"
                        app:check_control="true"
                        app:text_length="@integer/pw_length" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="right"
                    >

                    <TextView
                        android:id="@+id/loginFindTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="14dp"
                        android:theme="@style/BodyTypo"
                        android:text="@string/login_forgot" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_right" />
                </LinearLayout>

                <com.helper.helper.view.widget.LoadingButton
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    android:layout_gravity="center"
                    android:id="@+id/loginLoadingBtn"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.1" />
    </LinearLayout>

    <com.helper.helper.view.widget.SnackBar
        android:id="@+id/loginSnackBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>